added section on discussion, first cut for sim study section

--- a/report/pers_schedule/main.tex
+++ b/report/pers_schedule/main.tex
@@ -58,6 +58,7 @@
 \input{mainmatter/pers_biopsy_framework}
 \input{mainmatter/pers_schedule_prias}
 \input{mainmatter/sim_study}
+\input{mainmatter/discussion}
 
 \textbf{}
 
