--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -260,3 +260,14 @@ doi = {10.1093/biostatistics/kxv009},
   year={1996},
   publisher={JSTOR}
 }
+
+@article{lang2004bayesian,
+  title={Bayesian P-splines},
+  author={Lang, Stefan and Brezger, Andreas},
+  journal={Journal of computational and graphical statistics},
+  volume={13},
+  number={1},
+  pages={183--212},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
