third draft of paper.

--- a/report/pers_schedule/mainmatter/abstract.tex
+++ b/report/pers_schedule/mainmatter/abstract.tex
@@ -1,5 +1,5 @@
 % !TEX root =  ../main.tex 
 
 \begin{abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan magna est, quis elementum leo laoreet eu. Donec sollicitudin elit non massa venenatis, in viverra dolor sagittis. Maecenas ac justo pulvinar, consectetur mauris hendrerit, vulputate lacus. Etiam tristique sapien quis sem commodo, et eleifend tortor viverra. In hac habitasse platea dictumst. Phasellus vel tempus risus, sit amet consectetur massa. Duis rutrum lectus eu ligula egestas iaculis. Sed condimentum, ipsum in dignissim condimentum, nisi turpis blandit massa, et aliquam magna ligula eget lacus. Donec ac eleifend nulla, quis cursus nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse accumsan magna est, quis elementum leo laoreet eu. Donec sollicitudin elit non massa venenatis, in viverra dolor sagittis. Maecenas ac justo pulvinar, consectetur mauris hendrerit, vulputate lacus. Etiam tristique sapien quis sem commodo, et eleifend tortor viverra. In hac habitasse platea dictumst. Phasellus vel tempus risus, sit amet consectetur massa. Duis rutrum lectus eu ligula egestas iaculis. We demonstrate that personalized schedules are a very promising method to decide biopsy times for prostate cancer patients.
+Low risk prostate cancer patients are often encouraged to join active surveillance (AS) programs rather than taking immediate treatment. In most AS programs repeat biopsies are conducted annually or as per a common fixed schedule for these patients. When the Gleason score based on biopsies is found to be upgraded, the patients are given curative treatment. It has been found that such fixed and frequent schedules for biopsies discourage patients to receive repeat biopsies, and also bring a financial burden. Motivated by the world's largest AS program PRIAS, in this work we present personalized schedules for biopsies to counter these problems. Our methods create separate schedules for every person, on the basis of the evolution of their prostate-specific antigen (PSA) levels as well as results from previous repeat biopsies. We discuss criteria for evaluation of biopsy schedules, and then use them to compare the efficacy of personalized schedules with that of existing biopsy schedules.
 \end{abstract}
