--- a/report/pers_schedule/references.bib
+++ b/report/pers_schedule/references.bib
@@ -9,6 +9,18 @@
   publisher={Elsevier}
 }
 
+@article{Gleason_interobs_var,
+  title={Accuracy of biopsy Gleason scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
+  author={Carlson, Grant D and Calvanese, Christina B and Kahane, Hillel and Epstein, Jonathan I},
+  journal={Urology},
+  volume={51},
+  number={4},
+  pages={525--529},
+  year={1998},
+  publisher={Elsevier}
+}
+
+
 @article{cook1994equivalence,
   title={On the equivalence of constrained and compound optimal designs},
   author={Cook, R Dennis and Wong, Weng Kee},
