--- a/report/pers_schedule/mainmatter/pers_biopsy_framework.tex
+++ b/report/pers_schedule/mainmatter/pers_biopsy_framework.tex
@@ -2,7 +2,7 @@
 
 \section{Personalized schedules for repeat biopsies}
 \label{sec : pers_sched_approaches}
-Once a joint model for GR and PSA levels is obtained, the next step is to use it to create personalized schedules for biopsies. To elucidate the scheduling methods, let us assume that the a personalized schedule is to be created a new patient enumerated $j$, who is not present in the original sample of patients $\mathcal{D}_n$. Further let us assume that this patient did not have a GR at their last biopsy performed at time $t$, and that the PSA measurements are available up to a time point $s$. The goal is to find the optimal time $u \geq \text{max}(t,s)$ of the next biopsy each time results from repeat biopsy or a PSA measurement is available. 
+Once a joint model for GR and PSA levels is obtained, the next step is to use it to create personalized schedules for biopsies. To elucidate the scheduling methods, let us assume that a personalized schedule is to be created a new patient enumerated $j$, who is not present in the original sample of patients $\mathcal{D}_n$. Further let us assume that this patient did not have a GR at their last biopsy performed at time $t$, and that the PSA measurements are available up to a time point $s$. The goal is to find the optimal time $u \geq \text{max}(t,s)$ of the next biopsy.
 
 \subsection{Posterior predictive distribution for time to GR}
 \label{subsec : ppd_time_to_GR}
@@ -16,7 +16,7 @@ g(T^*_j) &= p(T^*_j \mid T^*_j > t, \mathcal{Y}_j(s), \mathcal{D}_n)\\
 &= \int \int p(T^*_j \mid T^*_j > t, \boldsymbol{b_j}, \boldsymbol{\theta}) p(\boldsymbol{b}_j \mid T^*_j>t, \mathcal{Y}_j(s), \boldsymbol{\theta})p(\boldsymbol{\theta} \mid \mathcal{D}_n) \,d\boldsymbol{b}_j \,d\boldsymbol{\theta}
 \end{split}
 \end{equation}
-The posterior predictive distribution depends on the observed longitudinal history via the random effects $\boldsymbol{b_j}$. The posterior distribution of the parameters $\boldsymbol{\theta}$, denoted by $p(\boldsymbol{\theta} \mid \mathcal{D}_n)$ is obtained from the joint model fitted to the original data set of patients $\mathcal{D}_n$.\\
+The posterior predictive distribution depends on the observed longitudinal history via the random effects $\boldsymbol{b_j}$. The posterior distribution of the parameters $\boldsymbol{\theta}$, denoted by $p(\boldsymbol{\theta} \mid \mathcal{D}_n)$ is obtained from the joint model fitted to the original data set of patients $\mathcal{D}_n$.
 
 \subsection{Loss functions}
 \label{subsec : loss_functions}
@@ -38,7 +38,7 @@ E_g[L(T^*_j, u)] &= E_g[(T^*_j - u)^2]\\
 &=E_g[(T^*_j)^2] + u^2 -2uE_g[T^*_j]
 \end{split}
 \end{equation}
-The posterior expected loss in equation (\ref{eq : posterior_squared_loss}) attains its minimum at $u = E_g[T^*_j]$, also known as expected time of GR. The posterior expected loss for the absolute loss function is given by:
+The posterior expected loss in Equation (\ref{eq : posterior_squared_loss}) attains its minimum at $u = E_g[T^*_j]$, also known as expected time of GR. The posterior expected loss for the absolute loss function is given by:
 
 \begin{equation}
 \label{eq : posterior_absolute_loss}
@@ -47,15 +47,16 @@ E_g[L(T^*_j, u)] &= E_g[\mid T^*_j - u \mid]\\
 &= \int_u^\infty (T^*_j - u) g(T^*_j)\, dT^*_j + \int_t^u (u - T^*_j) g(T^*_j)\, dT^*_j\\
 \end{split}
 \end{equation}
-The posterior absolute loss in equation (\ref{eq : posterior_absolute_loss}) attains its minimum at the median of $g(T^*_j)$, given by $u = \pi^{-1}(0.5)$, where $\pi^{-1}(\cdot)$ is the inverse of dynamic survival probability $\pi_j(u \mid t, s)$ of patient $j$ \citep{rizopoulos2011dynamic}. It is given by:
+The posterior expected loss in Equation (\ref{eq : posterior_absolute_loss}) attains its minimum at the median of $g(T^*_j)$, given by $u = \pi_j^{-1}(0.5)$, where $\pi_j^{-1}(\cdot)$ is the inverse of dynamic survival probability $\pi_j(u \mid t, s)$ of patient $j$ \citep{rizopoulos2011dynamic}. It is given by:
 
 \begin{equation}
 \pi_j(u \mid t, s) = Pr(T^*_j \geq u \mid  T^*_j >t, \mathcal{Y}_j(s), D_n), u \geq t
 \end{equation}
+For ease of readability we denote $\pi_j^{-1}(0.5)$ as $\text{Median}[T^*_j]$ hereforth.
 
 \subsubsection{Dynamic risk of GR}
 \label{subsubsec : dynamic_risk_definitions}
-In a practical scenario it is possible that a doctor or a patient may not want to exceed a certain risk of GR $1 - \pi_j(u \mid t, s)$ since the last biopsy. This may be also useful in the cases where variance of $g(T^*_j)$ is high, rendering expected time of GR, or any other measure of central tendency of $g(T^*_j)$ unsuitable. The personalized scheduling approach based on dynamic risk of GR, schedules the next biopsy at a time point $u$ such that the dynamic risk of GR is higher than a certain threshold $1-\kappa,\ \kappa \epsilon [0,1]$ beyond $u$. Or in other words the dynamic survival probability $\pi_j(u \mid t, s)$ is below a threshold $\kappa$ beyond $u$. To this end, the posterior expected loss for the following multilinear loss function can be minimized to find the optimal $u$:
+In a practical scenario it is possible that a doctor or a patient may not want to exceed a certain risk $1 - \pi_j(u \mid t, s)$ of GR since the last biopsy. This may be also useful in the cases where variance of $g(T^*_j)$ is high, rendering expected time of GR, or any other measure of central tendency of $g(T^*_j)$ unsuitable. The personalized scheduling approach based on dynamic risk of GR, schedules the next biopsy at a time point $u$ such that the dynamic risk of GR is higher than a certain threshold $1-\kappa,\ \kappa \epsilon [0,1]$ beyond $u$. Or in other words the dynamic survival probability $\pi_j(u \mid t, s)$ is below a threshold $\kappa$ beyond $u$. To this end, the posterior expected loss for the following multilinear loss function can be minimized to find the optimal $u$:
 
 \begin{equation}
 \label{eq : loss_dynamic_risk}
@@ -69,7 +70,7 @@ where $k_1 > 0$, $k_2 > 0$ are constants parameterizing the loss function. The p
 
 \subsection{A mixed approach between $E_g[T^*_j]$ and dynamic risk of GR}
 \label{subsec : mixed_approach}
-When the variance $Var_g[T^*_j]$ of $g(T^*_j)$ is small, then $E_g[T^*_j]$ is practically very useful. However when the variance is large, there may not be a clear central tendency of the distribution and $E_g[T^*_j]$ will either overshoot $T^*_j$ or undershoot it by a big margin. In the latter case more biopsies will be required until GR is detected at some time point $T_{j{N_j^b}} >  T^*_j$. The overshooting margin can be measured as an offset $O_j = T_{j{N_j^b}} - T_j^*$. The maximum acceptable $O_j$ in PRIAS is 3 years, which corresponds to the time gap between biopsies of the PRIAS fixed schedule. When $Var_g[T^*_j]$ is large, the proposals based on $E_g[T^*_j]$ can have a large $O_j$. Thus we propose that if the difference between the 0.025 quantile and $E_g[T^*_j]$ is more than 3 years then proposals based on dynamic risk of GR be used instead. We call this approach a mixed approach.
+When the variance $Var_g[T^*_j]$ of $g(T^*_j)$ is small, then $E_g[T^*_j]$ as well as $\text{Median}[T^*_j]$ are practically very useful. However when the variance is large, there may not be a clear central tendency of the distribution. Thus a biopsy scheduled using $E_g[T^*_j]$ or $\text{Median}[T^*_j]$ will overshoot/undershoot $T^*_j$ by a big margin. In case it undershoots the target time, more biopsies will be required until GR is detected at some time point $T_{j{N_j^b}} >  T^*_j$. In case of overshooting the target, the overshooting margin can be measured as an offset $O_j = T_{j{N_j^b}} - T_j^*$. The maximum acceptable $O_j$ in PRIAS is 3 years, which corresponds to the time gap between biopsies of the PRIAS fixed schedule. When $Var_g[T^*_j]$ is large, the proposals based on $E_g[T^*_j]$ or $\text{Median}[T^*_j]$ can have a large $O_j$. Thus we propose that if the difference between the 0.025 quantile and $E_g[T^*_j]$ or $\text{Median}[T^*_j]$ is more than 3 years then proposals based on dynamic risk of GR be used instead. We call this approach a mixed approach.
 
 \subsection{Estimation}
 \subsubsection{Estimation of $E_g[T^*_j]$ and $Var_g[T^*_j]$}
@@ -78,7 +79,7 @@ Since there is no closed form solution available for $E_g[T^*_j]$, for its estim
 \begin{equation*}
 E_g[T^*_j] = t + \int_t^\infty \pi_j(u \mid t, s) \,du
 \end{equation*}
-There is no closed form solution available for the integral and hence we approximate it using Gauss-Kronrod quadrature. We preferred this approach over Monte Carlo methods to estimate $E_g[T^*_j]$ from the posterior predictive distribution $g(T^*_j)$. This was done because sampling directly from $g(T^*_j)$ involved an additional step of sampling from the distribution $p(T^*_j \mid T^*_j > t, \boldsymbol{b_j}, \boldsymbol{\theta})$, as compared to the estimation of $\pi_j(u \mid t, s)$ \citep{rizopoulos2011dynamic}. Thus the latter approach was computationally faster. As mentioned earlier, a limitation of expected time of GR is that it is practically useful only when the variance of predictive distribution $g(T^*_j)$ is small. The variance is given by:
+There is no closed form solution available for the integral and hence we approximate it using Gauss-Kronrod quadrature. We preferred this approach over Monte Carlo methods to estimate $E_g[T^*_j]$ from the posterior predictive distribution $g(T^*_j)$. This was done because sampling directly from $g(T^*_j)$ involved an additional step of sampling from the distribution $p(T^*_j \mid T^*_j > t, \boldsymbol{b_j}, \boldsymbol{\theta})$, as compared to the estimation of $\pi_j(u \mid t, s)$ \citep{rizopoulos2011dynamic}. Thus the latter approach was computationally faster. As mentioned earlier, a limitation of expected time of GR is that it is practically useful only when the variance of $g(T^*_j)$ is small. The variance is given by:
 
 \begin{equation}
 \begin{split}
@@ -86,11 +87,11 @@ Var_g[T^*_j] &= E_g[{T^*_j}^2] - {E_g[T^*_j]}^2\\
 &= 2 \int_t^\infty {(u-t) \pi_j(u \mid t, s) \,du} - {\bigg(\int_t^\infty \pi_j(u \mid t, s) \,du\bigg)}^2
 \end{split}
 \end{equation}
-Since a closed form solution is not available for the variance expression, it is estimated similar to the estimation of $E_g[T^*_j]$. The variance depends both on last biopsy time $t$ and PSA history $\mathcal{Y}_j(s)$. The impact of the observed information on variance is demonstrated in Section \ref{subsec : demo_prias_pers_schedule}.
+Since a closed form solution is not available for the variance expression, it is estimated similar to the estimation of $E_g[T^*_j]$. The variance depends both on last biopsy time $t$ and PSA history $\mathcal{Y}_j(s)$. The impact of the observed information on variance is demonstrated in Figure \ref{fig : variance_pred_dist} and discussed in Section \ref{subsec : demo_prias_pers_schedule}.
 
 \subsubsection{Estimation of $\kappa$}
 \label{subsubsec : kappa_estimation}
-For schedules based on dynamic risk of GR, the value of $\kappa$ dictates the biopsy schedule and thus its choice has important consequences. In certain cases it may be chosen on the basis of doctor's advice or the amount of risk that is acceptable to the patient. For e.g. if maximum acceptable risk is 75\% then $\kappa = 0.25$, and correspondingly all $k_1, k_2 \mid k_1=\frac{k_2}{3}$ can be used in equation (\ref{eq : loss_dynamic_risk}) to calculate $u$.\\
+For schedules based on dynamic risk of GR, the value of $\kappa$ dictates the biopsy schedule and thus its choice has important consequences. In certain cases it may be chosen on the basis of doctor's advice or the amount of risk that is acceptable to the patient. For e.g. if maximum acceptable risk is 75\% then $\kappa = 0.25$, and correspondingly all $k_1, k_2 \mid k_1=\frac{k_2}{3}$ can be used in Equation (\ref{eq : loss_dynamic_risk}) to calculate $u$.\\
 
 While a doctor's advice can be invaluable, it is also possible to automate the choice of $\kappa$. We propose to choose a $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints,sokolova2009systematic}, discriminating between cases and controls, is maximized. In PRIAS, cases are patients who experience GR and the rest are controls. However, a patient can be in control group at some time $t_a$ and in the cases at some future time point $t_b > t_a$, and thus time dependent binary classification is more relevant. In joint models, a patient $j$ is predicted to be a case if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$ and a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep{rizopoulosJMbayes}. The time window $\Delta t$ can be either chosen on a clinical basis, or such that uncertainty in estimation of $\pi_j(t + \Delta t \mid t,s)$ is below a certain threshold or it can even be chosen such that $AUC(t, \Delta t, s)$ \citep{rizopoulosJMbayes} is largest. i.e. $\Delta t$ for which the model has the most discriminative capability at time $t$. The binary classification accuracy measures we maximize to select the threshold $\kappa$ are the following (the binary classification measures are functions of $t, \Delta t, s$, however the notation is dropped for readability): 
 
@@ -100,17 +101,17 @@ While a doctor's advice can be invaluable, it is also possible to automate the c
 \item Youden's index: $J = \text{Sensitivity} + \text{Specificity}- 1$,\\
 where sensitivity is defined as $Pr(\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid T^*_j \epsilon (t, t + \Delta t])$ and specificity is defined as $Pr(\pi_j(t + \Delta t \mid t,s) > \kappa \mid T^*_j > t + \Delta t)$ \citep{rizopoulosJMbayes}. Let $k_1 = FP \cdot TP - FN \cdot TN$ and $k_2 = (TP+FN)(FP+TN) - k_1$, where TP, FP, TN and FN are the number of true positives, false positives, true negatives and false negatives at time point $t$. The optimal $k_1, k_2$ or equivalently the $\kappa$ is obtained from $\argmax{k_1, k_2} J$.
 
-\item F1 Score: $F1 = \frac{2TP}{2TP + FP + FN}$. In this case if $k_1 = 2TP$ and $k_2 = FP + FN$, then $\argmax{k_1, k_2} F1$ gives the optimal $k_1, k_2$ or equivalently the $\kappa$.
+\item $\text{F}_1$-Score: $F_1 = \frac{2TP}{2TP + FP + FN}$. In this case if $k_1 = 2TP$ and $k_2 = FP + FN$, then $\argmax{k_1, k_2} F _1$ gives the optimal $k_1, k_2$ or equivalently the $\kappa$.
 \end{itemize}
 
 \subsection{Algorithm}
 \label{subsec : pers_sched_algorithm}
-The algorithm in Figure \ref{fig : sched_algorithm} elucidates the process of creating a personalized schedule for patient $j$. In the algorithm:
+Given the personalized scheduling methods, the next step is to iteratively create an entire schedule till GR is detected for the patient. To this end, the algorithm in Figure \ref{fig : sched_algorithm} elucidates the process of creating a personalized schedule for patient $j$. In the algorithm:
 
 \begin{enumerate}
 \item $t$ denotes the time of the latest biopsy.
 \item $s$ denotes the time of the latest available PSA measurement.
-\item $u$ denotes the personalized biopsy time based on $g(T^*_j)$.
+\item $u$ denotes the proposed time of personalized biopsy based on $g(T^*_j)$.
 \item $u^{pv}$ denotes the time at which a repeat biopsy was proposed at the last visit to the hospital.
 \item $T^{nv}$ denotes the time of the next visit for PSA measurement.
 \end{enumerate}
